--- a/4-Functions and Methods/FunctionPractice.ipynb
+++ b/4-Functions and Methods/FunctionPractice.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,19 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def convert_temperature(temp, unit):\n",
+    "    if unit =='C':\n",
+    "            return (temp *(9/5) + 32)\n",
+    "    elif unit=='F':\n",
+    "            return (temp -32) *(5/9)\n",
+    "    else:\n",
+    "            return None\n",
+    "\n",
+    "print(convert_temperature(25, 'C'))\n",
+    "print(convert_temperature(77, 'F'))\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +109,20 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "def calculate_total_cost(cart):\n",
+    "    result = 0\n",
+    "    for item in cart:\n",
+    "        result += item['price'] * item['quantity']\n",
+    "    return result\n",
+    "\n",
+    "cart = [\n",
+    "    {'name': 'Apple', 'price': 0.5, 'quantity': 4},\n",
+    "    {'name': 'Banana', 'price': 0.3, 'quantity': 6},\n",
+    "    {'name': 'Orange', 'price': 0.7, 'quantity': 3}\n",
+    "]\n",
+    "print(calculate_total_cost(cart))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +183,26 @@
      ]
     }
    ],
+   "source": [
+    "def is_prime(num):\n",
+    "    if(num <= 1):\n",
+    "        return False\n",
+    "    for i in range(2, int(num**0.5) + 1):\n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "        \n",
+    "\n",
+    "print(is_prime(7))\n",
+    "print(is_prime(10))\n",
+    "print(is_prime(1)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -177,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
